--- a/loginSignup/login_signup.html
+++ b/loginSignup/login_signup.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="login_signup.css">
-  <script src="login_signup.js"></script>
+
 </head>
 
 <body style="background-color: #586574;">
@@ -27,6 +27,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+  <script src="login_signup.js"></script>
   <div class="shadow p-3 mb-5 bg-white rounded margin-class">
     <div class="container">
       <div class="row">
@@ -51,20 +52,23 @@
     <form class="login">
       <div class="form-group">
         <label for="exampleInputEmail1" style="color: whitesmoke;">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+          placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1" style="color: whitesmoke;">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <a onclick="document.getElementById('id01').style.display='block'" id="forget_password">Forget Password</a>
       </div>
       <div class="form-group form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1" style="color: whitesmoke;">Check me out</label>
       </div>
       <center><button type="submit" class="btn btn-light" style="text-align: center;">Submit</button>
-      <button type="reset" class="btn btn-light" style="align-items: center;">Reset</button>
-      <button onclick="show('replace_login')" class="btn btn-light" style="align-items: center;">Back</button></center>
+        <button type="reset" class="btn btn-light" style="align-items: center;">Reset</button>
+        <button onclick="show('replace_login')" class="btn btn-light" style="align-items: center;">Back</button>
+      </center>
     </form>
   </div>
   <div id="signup_form" style="display: none;">
@@ -75,7 +79,8 @@
       </div>
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+          placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
       </div>
       <div class="form-group">
@@ -91,11 +96,39 @@
         <label class="form-check-label" for="exampleCheck1">Check me out</label>
       </div>
       <center>
-      <button type="submit" class="btn btn-dark" style="text-align: center; margin-top: 10px;">Submit</button>
-      <button type="reset" class="btn btn-dark" style="align-items: center; margin-top: 10px;">Reset</button>
-      <button onclick="show('replace_signup')" class="btn btn-dark" style="align-items: center; margin-top: 10px;">Back</button></center>
+        <button type="submit" class="btn btn-dark" style="text-align: center; margin-top: 10px;">Submit</button>
+        <button type="reset" class="btn btn-dark" style="align-items: center; margin-top: 10px;">Reset</button>
+        <button onclick="show('replace_signup')" class="btn btn-dark"
+          style="align-items: center; margin-top: 10px;">Back</button>
+      </center>
     </form>
   </div>
+  <div class="container">
+    <div id="id01" class="modal">
+      <form class="modal-content animate login margin">
+        <div class="form-group">
+          <label for="newpaswrd">New Password</label>
+          <input type="text" class="form-control" id="newpswrd" placeholder="New Password">
+        </div>
+        <div class="form-group">
+          <label for="confirmpswrd">Confrim Password</label>
+          <input type="password" class="form-control" id="confirmpswrd" placeholder="Confirm Password">
+        </div>
+        <center><button class="btn btn-dark" id="back_login" style="text-align: center;">Submit</button></center>
+      </form>
+    </div>
+  </div>
+  <script language="javascript" type="text/javascript">
+    // Get the modal
+    var modal = document.getElementById('id01');
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+  </script>
 </body>
 
 </html>
